--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@
     height: 2rem;
 }
 
+/* ------------------------------------------- */
+
 #dashboard-container {
     background-color: rebeccapurple;
 }
@@ -56,6 +58,55 @@
     justify-content: space-between;
     align-items: center;
     background-color: antiquewhite;
+    padding: 1.4rem 2rem;
+}
+
+#search-container{
+    display: flex;
+    width: 80%;
+}
+
+input[type="search"] {
+    width: clamp(50%, 80%, 100%);
+    max-height: 2rem;
+    flex: 1;
+    border: none;
+}
+
+#profile-container {
+    width: 20%;
+    padding: 1rem;
+    display: grid;
+    align-items: center;
+    gap: 1rem;  
+    grid-template-columns: repeat(auto-fit, minmax(1rem, 1fr));
+}
+
+#greeting-container {
+    flex: 2;
+    display: flex;
+}
+
+#buttons-container{
+    flex: 1;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.profile-img-container{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-img-container img{
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #main-content-container {
@@ -72,3 +123,13 @@
 #trending {
     grid-column: 2 / 3;
 }
+
+.header-icon{
+    width: 2rem;
+}
+
+.profile-container img{
+    width: 5rem;
+}
+
+
