--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-#main-container {
+#container {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr;
 }
 
-#nav-container {
+#navbar {
     padding: 1.5rem;
     background-color: royalblue;
 }
@@ -22,7 +22,11 @@
     margin-top: 1rem;
 }
 
-.nav-item {
+#nav-list li{
+    list-style: none;
+}
+
+.navbar-item {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -39,17 +43,13 @@
     height: 70%;
 }
 
-.list-item {
-    list-style: none;
-}
-
-.list-item img {
-    height: 2rem;
+.navbar-item img {
+    height: 2.2rem;
 }
 
 /* ------------------------------------------- */
 
-#dashboard-container {
+#dashboard {
     background-color: rebeccapurple;
 }
 
@@ -57,62 +57,69 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: antiquewhite;
     padding: 1.4rem 2rem;
+    background-color: antiquewhite;
 }
 
-#search-container{
+#search {
     display: flex;
     width: 80%;
 }
 
 input[type="search"] {
-    width: clamp(50%, 80%, 100%);
-    max-height: 2rem;
     flex: 1;
+    max-height: 2rem;
+    border-radius: 1rem;
     border: none;
 }
 
-#profile-container {
+#account {
     width: 20%;
     padding: 1rem;
     display: grid;
-    align-items: center;
     gap: 1rem;  
+    align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(1rem, 1fr));
 }
 
-#greeting-container {
+.icon {
+    width: 2rem;
+}
+
+#admin-profile {
     flex: 2;
+}
+
+.profile {
     display: flex;
 }
 
-#buttons-container{
+.profile-picture {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    border-radius: 50%;
+}
+
+.profile-picture img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#buttons {
     flex: 1;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
-.profile-img-container{
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    background-color: aqua;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.profile-img-container img{
-    max-width: 100%;
-    max-height: 100%;
-}
-
-#main-content-container {
+#main-content {
     display: grid;
-    grid-template: repeat(auto-fit, minmax(150px, 1fr)) / 3fr 1fr;
     gap: 2rem;
+    grid-template: repeat(auto-fit, minmax(150px, 1fr)) / 3fr 1fr;
 }
 
 #projects {
@@ -120,16 +127,7 @@ input[type="search"] {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-#trending {
+#trending-profiles {
     grid-column: 2 / 3;
 }
-
-.header-icon{
-    width: 2rem;
-}
-
-.profile-container img{
-    width: 5rem;
-}
-
 
