--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ input[type="search"] {
 
 #projects {
     display: grid;
+    gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     background-color: rgb(155, 15, 155);
 }
@@ -151,6 +152,24 @@ input[type="search"] {
 .section-title {
     font-size: 1.6rem;
     margin-bottom: 1rem;
+}
+
+.project {
+    padding: 1.2rem;
+    font-size: 1.1rem;
+    border-radius: 1rem;
+    background-color: #22adc5;
+    border-left: 10px solid salmon;
+}
+
+.options {
+    display: flex;
+    justify-content: flex-end;
+    margin: 1rem 0rem;
+}
+
+.options > img {
+    margin: 0rem 0.6rem;
 }
 
 #announcements {
@@ -164,7 +183,7 @@ input[type="search"] {
     border-bottom: 1px solid #080808;
 }
 
-.announcement:last-child{
+.announcement:last-child {
     padding: 1rem;
 }
 
