--- a/style.css
+++ b/style.css
@@ -195,3 +195,21 @@ input[type="search"] {
     grid-column: 2 / 3;
 }
 
+#trending-profiles {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 1rem;
+    padding: 1.4rem;
+    background-color: #22adc5;
+}
+
+.trending-profile {
+    display: flex;
+    align-items: center;
+}
+
+.trending-profile-details {
+    margin-left: 1rem;
+}
+
