--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ input[type="search"] {
 #announcements {
     font-size: 1rem;
     padding: 0.8rem;
+    border-radius: 0.6rem;
     background-color: #22adc5;
 }
 
@@ -201,6 +202,7 @@ input[type="search"] {
     gap: 1rem;
     font-size: 1rem;
     padding: 1.4rem;
+    border-radius: 0.6rem;
     background-color: #22adc5;
 }
 
