Increase size of admin profile picture
Remove width and height from the profile picture class and add required
width and height by directly selecting the needed profile picture
container. Add the 'project-section' class on main tag instead of having
yet another div for it. Add some relevant content. Make username bold.

--- a/style.css
+++ b/style.css
@@ -90,9 +90,11 @@ input[type="search"] {
     width: 1.8rem;
 }
 
-.profile-picture {
-    width: 4rem;
-    height: 4rem;
+.username {
+    font-weight: bold;
+}
+
+.profile-picture {   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,6 +112,8 @@ input[type="search"] {
 }
 
 #admin-profile > .profile-picture {
+    width: 5rem;
+    height: 5rem;
     margin-right: 1rem;
 }
 
@@ -211,7 +215,11 @@ input[type="search"] {
     align-items: center;
 }
 
+.trending-profile > .profile-picture {
+    width: 4rem;
+    height: 4rem;
+}
+
 .trending-profile-details {
     margin-left: 1rem;
 }
-
