--- a/style.css
+++ b/style.css
@@ -36,11 +36,11 @@
 #logo {
     font-size: 2rem;
     font-weight: bold;
-    height: 10%;
+    padding: 1rem 0rem;
 }
 
 #logo img {
-    height: 50%;
+    height: 3rem;
 }
 
 .navbar-item img {
